added comments on ToDoList.html

--- a/ToDoList.html
+++ b/ToDoList.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My To Do List</title>
-    <link rel="stylesheet" href="ToDoList.css">
+    <link rel="stylesheet" href="ToDoList.css"><!-- css file -->
 </head>
 <body>
     <div class="container">
         <div class="todo-app">
             <h2>To-Do List <img src="todo.jfif" alt=""></h2>
-            <!-- remember to add an image on the h2 -->
             <div class="row">
                 <input type="text"id="input-box" placeholder="Add Your Text">
                 <button onclick="addTask()">Add</button>
@@ -21,6 +20,6 @@
 
         </div>
     </div>
-    <script src="ToDoList.js"></script>
+    <script src="ToDoList.js"></script><!-- javascript file -->
 </body>
 </html>
